#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

# Initialization
AC_PREREQ([2.64])
AC_INIT(babysitter, 0.1)
# AM_INIT_AUTOMAKE([-Wall -Werror foreign])

# Checks for programs.
AC_PROG_CC
AC_PROG_CXX
AC_PATH_PROG(ERL, erl)
AC_PATH_PROG(ERLC, erlc)

# Erlang stuff
 
m4_define([AC_LANG(Erlang)],
[ac_ext=erl
 ac_compile='$ERLC $ERLCFLAGS -b beam conftest.$ac_ext >&AS_MESSAGE_LOG_FD'
 ac_link='$ERLC $ERLCFLAGS -b beam conftest.$ac_ext >&AS_MESSAGE_LOG_FD; echo "#!/bin/sh" > conftest$ac_exeext; echo "\"$ERL\" -s conftest -s init stop -noshell" >> conftest$ac_exeext; chmod +x conftest$ac_exeext'
])
 
AC_ERLANG_SUBST_ROOT_DIR
AC_ERLANG_SUBST_INSTALL_LIB_DIR
AC_ERLANG_CHECK_LIB(erl_interface,
                    [], [AC_MSG_FAILURE(cannot find erl_interface, [1])])

ERLDIR=`awk -F= '/ROOTDIR=/ { print [$]2; exit; }' $ERL`
AC_SUBST(ERL)
AC_SUBST(ERLC)
AC_SUBST(ERLBINDIR)
AC_SUBST(ERLDIR)

ERL_INTERFACE=`ls ${ERLDIR}/lib | grep erl_interface | tail -n 1`
 
ERTSBASE="`$ERL -noshell -noinput -eval 'io:format (\"~s\", [[ \"/\" ++ filename:join (lists:reverse ([ \"erts-\" ++ erlang:system_info (version) | tl (lists:reverse (string:tokens (code:lib_dir (), \"/\"))) ])) ]]).' -s erlang halt `"
AC_SUBST(ERTSBASE)

CPPFLAGS="$CPPFLAGS -I ${ERTSBASE}/include -I ${ERLDIR}/lib/${ERL_INTERFACE}/include -Wall -fPIC -I./"

LIBEI="${ERLDIR}/lib/${ERL_INTERFACE}/lib/libei.a"
AC_SUBST(LIBEI)

# Custom proggies
AC_ARG_WITH(libelf,
    [ --with-libelf=<path> prefix of the LibElf installation. e.g. /usr/local or /usr],
    [ELF_PREFIX=$with_libelf],
		[ELF_PREFIX=/usr/local/include])

AC_SUBST(ELF_PREFIX)
ELF_LIBS="-L${ELF_PREFIX}/lib -lelf"
ELF_CFLAGS="-I${ELF_PREFIX}/include"
AC_SUBST(ELF_CFLAGS)
AC_SUBST(ELF_LIBS)

# Checks for libraries.
AC_HEADER_STDC

# Checks for header files.
AC_CHECK_HEADERS([fcntl.h limits.h string.h sys/time.h unistd.h gelf.h])
AC_CHECK_HEADERS([sys/param.h sys/prctl.h])
AC_CHECK_HEADERS(sys/resource.h)


# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_TYPE_INT32_T
AC_TYPE_INT64_T
AC_TYPE_SIZE_T
AC_TYPE_UINT32_T
AC_TYPE_UINT64_T

# Checks for library functions.
AC_FUNC_REALLOC
AC_FUNC_CHOWN
AC_FUNC_FORK
AC_TYPE_MODE_T
AC_TYPE_PID_T
AC_TYPE_UID_T
AC_CHECK_FUNCS([gettimeofday memset alarm atexit mkdir regcomp select strchr strdup strerror])

AC_OUTPUT([c/Makefile erl/Makefile Makefile])